--- a/synapsis/src/main/resources/templates/pages/ourServices.html
+++ b/synapsis/src/main/resources/templates/pages/ourServices.html
@@ -8,45 +8,45 @@
         <h2 class="text-center text-6xl">Our Services</h2> <br>
         <hr class="border-t border-grey-light">
         <br>
-        <div class="w-full bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div class="w-full bg-white border border-gray-200 rounded-lg shadow ">
             <div class="sm:hidden">
                 <label for="tabs" class="sr-only">Select tab</label>
                 <select id="tabs"
-                        class="bg-gray-50 border-0 border-b border-gray-200 text-gray-900 text-sm rounded-t-lg focus:ring-red-600 focus:border-red-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-red-600 dark:focus:border-red-600">
+                        class="bg-gray-50 border-0 border-b border-gray-200 text-gray-900 text-sm rounded-t-lg focus:ring-red-600 focus:border-red-600 block w-full p-2.5 ">
                     <option>Networking</option>
                     <option>Messaging</option>
                     <option>Jobs</option>
                 </select>
             </div>
           <!--Bullet points under each section-->
-          <ul class="hidden text-sm font-medium text-center text-gray-500 divide-x divide-gray-200 rounded-lg sm:flex dark:divide-gray-600 dark:text-gray-400"
+          <ul class="hidden text-sm font-medium text-center text-gray-500 divide-x divide-gray-200 rounded-lg sm:flex "
                 id="fullWidthTab" data-tabs-toggle="#fullWidthTabContent" role="tablist">
                 <li class="w-full">
                     <button id="networking-tab" data-tabs-target="#networking" type="button" role="tab"
                             aria-controls="networking" aria-selected="true"
-                            class="inline-block w-full p-4 rounded-tl-lg bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">
+                            class="inline-block w-full p-4 rounded-tl-lg bg-gray-50 hover:bg-gray-100 focus:outline-none ">
                         Networking
                     </button>
                 </li>
                 <li class="w-full">
                     <button id="messaging-tab" data-tabs-target="#messaging" type="button" role="tab"
                             aria-controls="messaging" aria-selected="false"
-                            class="inline-block w-full p-4 bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">
+                            class="inline-block w-full p-4 bg-gray-50 hover:bg-gray-100 focus:outline-none ">
                         Messaging
                     </button>
                 </li>
                 <li class="w-full">
                     <button id="jobs-tab" data-tabs-target="#jobs" type="button" role="tab" aria-controls="jobs"
                             aria-selected="false"
-                            class="inline-block w-full p-4 rounded-tr-lg bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">
+                            class="inline-block w-full p-4 rounded-tr-lg bg-gray-50 hover:bg-gray-100 focus:outline-none ">
                         Jobs
                     </button>
                 </li>
             </ul>
-            <div id="fullWidthTabContent" class="border-t border-gray-200 dark:border-gray-600">
-                <div class="hidden p-4 bg-white rounded-lg md:p-8 dark:bg-gray-800" id="networking" role="tabpanel"
+            <div id="fullWidthTabContent" class="border-t border-gray-200 ">
+                <div class="hidden p-4 bg-white rounded-lg md:p-8 " id="networking" role="tabpanel"
                      aria-labelledby="networking-tab">
-                    <ul role="list" class="space-y-4 text-gray-500 dark:text-gray-400">
+                    <ul role="list" class="space-y-4 text-gray-500 ">
                         <li class="flex space-x-2">
                             <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
                                  xmlns="http://www.w3.org/2000/svg">
@@ -76,9 +76,9 @@
                         </li>
                     </ul>
                 </div>
-                <div class="hidden p-4 bg-white rounded-lg md:p-8 dark:bg-gray-800" id="messaging" role="tabpanel"
+                <div class="hidden p-4 bg-white rounded-lg md:p-8 " id="messaging" role="tabpanel"
                      aria-labelledby="messaging-tab">
-                    <ul role="list" class="space-y-4 text-gray-500 dark:text-gray-400">
+                    <ul role="list" class="space-y-4 text-gray-500 ">
                         <li class="flex space-x-2">
                             <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
                                  xmlns="http://www.w3.org/2000/svg">
@@ -99,9 +99,9 @@
                         </li>
                     </ul>
                 </div>
-                <div class="hidden p-4 bg-white rounded-lg md:p-8 dark:bg-gray-800" id="jobs" role="tabpanel"
+                <div class="hidden p-4 bg-white rounded-lg md:p-8 " id="jobs" role="tabpanel"
                      aria-labelledby="jobs-tab">
-                    <ul role="list" class="space-y-4 text-gray-500 dark:text-gray-400">
+                    <ul role="list" class="space-y-4 text-gray-500 ">
                         <li class="flex space-x-2">
                             <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
                                  xmlns="http://www.w3.org/2000/svg">
