--- a/synapsis/src/main/resources/templates/fragments/footer.html
+++ b/synapsis/src/main/resources/templates/fragments/footer.html
@@ -1,32 +1,59 @@
 <div th:fragment="footer" class="h-64">
+    <div class="langEN">
     <form sec:authorize="isAuthenticated()"class="mt-8 text-center">
         <label for="back" class="p-3 text-black-variant text-sm bg-light rounded-lg cursor-pointer hover:text-primary transition ease-in-out duration-300">
             Back to previous page
         </label>
         <input type="button" id="back" onclick="history.back()">
     </form>
+    </div>
+
+    <div class="langFR">
+        <form sec:authorize="isAuthenticated()"class="mt-8 text-center">
+            <label for="back" class="p-3 text-black-variant text-sm bg-light rounded-lg cursor-pointer hover:text-primary transition ease-in-out duration-300">
+                Retournez à la page précédente
+            </label>
+            <input type="button" id="back" onclick="history.back()">
+        </form>
+    </div>
+
     <div class="w-full bg-black-variant relative bottom-0 left-0">
         <div class="container flex flex-row justify-between mt-8">
             <div class="flex-none mt-4 ml-24 lg:ml-36 xl:ml-56 w-3/6">
                 <img src="/assets/synapsis_red.svg" class="w-72 mr-10" alt="Synapsis Logo">
-                <div class="flex-none font-light text-white text-sm ml-2">
+                <div class="langEN flex-none font-light text-white text-sm ml-2">
                     Your space to make connections.
                 </div>
+                <div class="langFR flex-none font-light text-white text-sm ml-2">
+                    Votre espace pour créer des liens
+                </div>
             </div>
             <div class="flex-1 container flex-col items-start">
             </div>
             <div class="flex-1 container flex-col items-start">
-                <div class="flex-none font-light text-white text-lg mt-4">
+                <div class="langEN flex-none font-light text-white text-lg mt-4">
                     <a href="/register"> Sign Up </a>
                 </div>
-                <div class="flex-none font-light text-white text-lg">
+                <div class="langFR flex-none font-light text-white text-lg mt-4">
+                    <a href="/register"> Créez votre compte</a>
+                </div>
+                <div class="langEN flex-none font-light text-white text-lg">
                     <a href="/aboutUs"> About </a>
                 </div>
-                <div class="flex-none font-light text-white text-lg">
+                <div class="langFR flex-none font-light text-white text-lg">
+                    <a href="/aboutUs"> À propos </a>
+                </div>
+                <div class="langEN flex-none font-light text-white text-lg">
                     <a href="/ourServices"> Services </a>
                 </div>
-                <div class="flex-none font-light text-white text-lg">
-                    <a> Contact </a>
+                <div class="langFR flex-none font-light text-white text-lg">
+                    <a href="/ourServices">Services </a>
+                </div>
+                <div class="langEN flex-none font-light text-white text-lg">
+                    <a href="/contactUs" > Contact </a>
+                </div>
+                <div class="langFR flex-none font-light text-white text-lg">
+                    <a href="/contactUs"> Nous joindre </a>
                 </div>
             </div>
             <div class="flex-1 container flex-col items-start">
@@ -40,9 +67,9 @@
                 </div>
             </div>
             <div class="langSelector flex-none font-light text-white text-xs mr-4">
-                <a class="langEN">Francais</a>
-                <a class="langFR">English</a>
-            </div>
+            <a class="langEN">Francais</a>
+            <a class="langFR">English</a>
+           </div>
         </div>
     </div>
 </div>
