--- a/synapsis/src/main/resources/templates/pages/passwordUpdateForm.html
+++ b/synapsis/src/main/resources/templates/pages/passwordUpdateForm.html
@@ -24,7 +24,7 @@
 
             <span id="mismatch_password" class="text-primary hidden">The passwords provided do not match!</span>
 
-            <button type="submit" class="btn btn-primary mt-3 bg-primary text-base w-1/6 mx-auto p-4 rounded-2xl font-thin
+            <button type="submit" class="btn btn-primary mt-3 bg-primary text-base mx-auto p-4 rounded-2xl font-thin
                     transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Submit
             </button>
         </div>
