#285 localized footer,navbar,notification,fixed broken links

--- a/synapsis/src/main/resources/templates/fragments/notifications.html
+++ b/synapsis/src/main/resources/templates/fragments/notifications.html
@@ -6,6 +6,7 @@
         <td >Nothing to show!</td>
     </li>
     </div>
+    <!-- localized version of same message-->
     <div class="langFR">
         <li th:if="${notificationList.empty}" class="p-2">
             <td >Rien à montrer!</td>
