#285 fixed bug of hamburger navbar

--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -247,7 +247,7 @@
                 <img src="/assets/synapsis_black.svg" class="h-12 mt-3 mr-3 " alt="Synapsis Logo">
             </a>
 
-            <div class="langEN inline-block flex items-center">
+            <div class="inline-block flex items-center">
                 <div class="inline-block items-center p-2 text-gray-500 rounded">
                     <div class="relative group">
                         <div class="cursor-pointer text-md   border-b-0
@@ -268,26 +268,7 @@
                 </button>
             </div>
 
-            <div class="langFR inline-block flex items-center">
-                <div class="inline-block items-center p-2 text-gray-500 rounded">
-                    <div class="relative group">
-                        <div class="cursor-pointer text-md   border-b-0
-                                group-hover:border-grey-light">
-                            <i id="notificationIcon" class="fa-solid fa-bell fa-xl">
-                                <div class="dot absolute bottom-0 right-0" style="visibility: hidden"
-                                     id="mobileNotificationPresent"></div>
-                            </i>
-                        </div>
-                        <div class="absolute right-0 border border-t-0 w-52 bg-neutral-100 rounded-lg invisible group-hover:visible group-active:visible">
-                            <div id="mobile_notification_output" class="text-center ml-2">Rien à montrer!</div>
-                        </div>
-                    </div>
-                </div>
-                <button id="mobileButton" type="button"
-                        class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg">
-                    <i class="fa-solid fa-bars fa-2x"></i>
-                </button>
-            </div>
+
 
             <div class="hidden w-full" id="hamburger">
                 <ul class="flex flex-col mt-4 rounded-md bg-neutral-100 text-black">
@@ -699,7 +680,7 @@
                 <img src="/assets/synapsis_black.svg" class="h-12 mt-3 mr-3 " alt="Synapsis Logo">
             </a>
 
-            <div class="langEN inline-block flex items-center">
+            <div class="inline-block flex items-center">
                 <div class="inline-block items-center p-2 text-gray-500 rounded">
                     <div class="relative group">
                         <div class="cursor-pointer text-md   border-b-0
@@ -722,26 +703,6 @@
                 </button>
             </div>
 
-            <div class="langFR inline-block flex items-center">
-                <div class="inline-block items-center p-2 text-gray-500 rounded">
-                    <div class="relative group">
-                        <div class="cursor-pointer text-md   border-b-0
-                                group-hover:border-grey-light">
-                            <i id="notificationIcon" class="fa-solid fa-bell fa-xl">
-                                <div class="dot absolute bottom-0 right-0" style="visibility: hidden"
-                                     id="mobileNotificationPresent"></div>
-                            </i>
-                        </div>
-                        <div class="absolute right-0 border border-t-0 w-52 bg-neutral-100 rounded-lg invisible group-hover:visible group-active:visible">
-                            <div id="mobile_notification_output" class="text-center ml-2">Rien à montrer!</div>
-                        </div>
-                    </div>
-                </div>
-                <button id="mobileButton" type="button"
-                        class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg">
-                    <i class="fa-solid fa-bars fa-2x"></i>
-                </button>
-            </div>
 
             <div class="hidden w-full" id="hamburger">
                 <ul class="flex flex-col mt-4 rounded-md bg-neutral-100 text-black">
