#300 add suggested jobs page

--- a/synapsis/src/main/resources/templates/pages/jobs.html
+++ b/synapsis/src/main/resources/templates/pages/jobs.html
@@ -26,6 +26,9 @@
                     <i class="fa-solid fa-bookmark"></i>
                 </a>
             </div>
+            <div class="flex justify-center mt-1">
+                <a th:href="@{/suggestedjobs}" class="text-lg text-center text-black-variant mb-4 mt-5">Suggested Jobs</a>
+            </div>
             <hr class="border-t border-grey-light">
             <h1 class="text-3xl text-center text-black-variant mb-4 mt-5">Job Filters</h1>
             <hr class="border-t border-grey-light">
@@ -103,6 +106,9 @@
                         <a th:href="@{/savedjobs}" class="text-lg text-center text-black-variant mb-4 mt-5">Saved Jobs
                             <i class="fa-solid fa-bookmark"></i>
                         </a>
+                    </div>
+                    <div class="flex justify-center mt-1">
+                        <a th:href="@{/suggestedjobs}" class="text-lg text-center text-black-variant mb-4 mt-5">Suggested Jobs</a>
                     </div>
                     <hr class="border-t border-grey-light">
                     <h1 class="text-3xl text-center text-black-variant mb-4 mt-5">Job Filters</h1>
