--- a/synapsis/src/main/resources/templates/pages/savedjobs.html
+++ b/synapsis/src/main/resources/templates/pages/savedjobs.html
@@ -18,7 +18,7 @@
 
         <div th:if="${jobs.size() > 0}" th:each="job: ${jobs}" class="flex flex-col inline-block rounded-2xl shadow w-56 min-h-min bg-white mt-4 mr-4 pb-4">
 
-          <img class="w-56 h-40">
+          <img class="w-56 h-40" src="../../assets/company_default.jpg">
           <div class="font-sans text-base font-light mt-2 ml-4" th:text="${job.get().position}"></div>
           <div class="font-sans text-base font-light mt-2 ml-4" th:text="${job.get().company.getName()}"></div>
 
