--- a/synapsis/src/main/resources/templates/fragments/footer.html
+++ b/synapsis/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,4 @@
-<div th:fragment="footer" class="h-64">
+<div th:fragment="footer" class="h-full">
     <div class="langEN">
     <form sec:authorize="isAuthenticated()"class="mt-8 text-center">
         <label for="back" class="p-3 text-black-variant text-sm bg-light rounded-lg cursor-pointer hover:text-primary transition ease-in-out duration-300">
