--- a/synapsis/src/main/resources/templates/pages/updateuserpage.html
+++ b/synapsis/src/main/resources/templates/pages/updateuserpage.html
@@ -1,82 +1,111 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="_layout">
-<div layout:fragment="content">
+<div layout:fragment="content" class="flex justify-center">
 
     <p th:text="${error}"></p>
-    <form th:action="@{/user/update}"
-          th:object="${updateAppUserProfileRequest}"
-          method="post"
-          enctype="multipart/form-data"
-    >
         <!-- The page that will be displayed in case user candidate or recruiter account user wants to edit their profile -->
 
-        <div class="flex max-w-xl bg-neutral-100 border-gray-200 ml-28 rounded-lg shadow">
-            <div class="p-5">
-                <label>Change Profile Picture</label>
-                <input type="file" name="image" accept="image/png, image/jpeg"/>
-                <br>
-                <label>Change Cover Picture</label>
-                <input type="file" name="coverImage" accept="image/png, image/jpeg"/>
-                <br>
-
-                <label>Upload Default Resume</label>
-                <input type="file" name="defaultResume" accept=".pdf,.docx"/>
-                <br>
-                <label>Upload Default Cover Letter</label>
-                <input type="file" name="defaultCoverLetter" accept=".pdf,.docx"/>
-                <br>
-                <label th:if="${default_resume != null}">Current Default Resume</label><br>
-                <p th:if="${default_resume != null}" th:text="${default_resume}"></p>
-                <label th:if="${default_cover_letter != null}">Current Default Cover Letter</label><br>
-                <p th:if="${default_cover_letter != null}" th:text="${default_cover_letter}"></p>
-                <br>
-                <label>Description</label><br>
-                <textarea id="description" name="description"
-                          class="w-full py-3 px-4 mb-3 h-32 resize-y font-normal tracking-tight text-gray-900  resize-y"
-                          th:text="${profile.description}"></textarea>
-                <br>
-                <label>Education</label><br>
-                <input type="text" id="education" name="education" th:value="${profile.education}"
-                       class="mb-2 text-left   font-normal tracking-tight text-gray-900 "/>
-                <br>
-                <label>Skill(s)</label><br>
-                <input type="text" id="skill" name="skill" th:value="${profile.skill}"
-                       class="mb-2 text-left  font-normal tracking-tight text-gray-900 "/>
-                <br>
-                <label>Work</label><br>
-                <input type="text" id="work" name="work" th:value="${profile.work}"
-                       class="mb-2 text-left  font-normal tracking-tight text-gray-900 "/>
-                <br>
-                <label>Course(s)</label><br>
-                <input type="text" id="course" name="course" th:value="${profile.course}"
-                       class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
-                <br>
-                <label>Phone</label><br>
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-                       th:value="${profile.phone}"
-                       class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
-                <br><span class="help-block">Format: 123-456-7890</span><br>
-                <br>
-                <label>Volunteering</label><br>
-                <input type="text" id="volunteering" name="volunteering" th:value="${profile.volunteering}"
-                       class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
-                <br>
-                <label>Project(s)</label><br>
-                <input type="text" id="project" name="project" th:value="${profile.project}"
-                       class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
-                <br>
-                <label>Award(s)</label><br>
-                <input type="text" id="award" name="award" th:value="${profile.award}"
-                       class="mb-2 text-left font-normal  tracking-tight text-gray-900 "/>
-                <br>
-                <label>Language(s)</label><br>
-                <input type="text" id="location" name="language" th:value="${profile.language}"
-                       class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
-                <br>
-                <button class=" btn bg-red-500 text-white rounded-full" type="submit">Save</button>
+        <div class="flex w-4/5 lg:w-1/2 p-5 bg-neutral-100 border-gray-200 rounded-lg shadow">
+            <form th:action="@{/user/update}"
+                  th:object="${updateAppUserProfileRequest}"
+                  method="post"
+                  enctype="multipart/form-data"
+                  class="w-full"
+            >
+            <div class="grid grid-cols-2 py-1">
+                <div><label>Change Profile Picture</label></div>
+                <div><input type="file" name="image" accept="image/png, image/jpeg"/></div>
             </div>
+
+            <div class="grid grid-cols-2 py-1">
+                <div><label>Change Cover Picture</label></div>
+                <div><input type="file" name="coverImage" accept="image/png, image/jpeg"/></div>
+            </div>
+
+            <div class="grid grid-cols-2 py-1">
+            <div><label>Upload Default Resume</label></div>
+            <div><input type="file" name="defaultResume" accept=".pdf,.docx"/></div>
+            </div>
+
+            <div class="grid grid-cols-2 py-1">
+            <div><label>Upload Default Cover Letter</label></div>
+            <div><input type="file" name="defaultCoverLetter" accept=".pdf,.docx"/></div>
+            </div>
+
+            <label th:if="${default_resume != null}">Current Default Resume</label><br>
+            <p th:if="${default_resume != null}" th:text="${default_resume}"></p>
+            <label th:if="${default_cover_letter != null}">Current Default Cover Letter</label><br>
+            <p th:if="${default_cover_letter != null}" th:text="${default_cover_letter}"></p>
+
+            <div>
+            <label>Description</label><br>
+            <textarea id="description" name="description"
+                      class="w-full py-3 px-4 mb-3 rounded-lg h-32 font-normal tracking-tight text-gray-900 resize-y"
+                      th:text="${profile.description}"></textarea>
+            </div>
+
+            <div>
+            <label>Education</label><br>
+            <input type="text" id="education" name="education" th:value="${profile.education}"
+                   class="w-full py-3 px-4 mb-3 rounded-lg font-normal tracking-tight text-gray-900"/>
+            </div>
+
+            <div>
+            <label>Skill(s)</label><br>
+            <input type="text" id="skill" name="skill" th:value="${profile.skill}"
+                   class="w-full py-3 px-4 mb-3 rounded-lg font-normal tracking-tight text-gray-900"/>
+            </div>
+
+            <div>
+            <label>Work</label><br>
+            <input type="text" id="work" name="work" th:value="${profile.work}"
+                   class="w-full py-3 px-4 mb-3 rounded-lg font-normal tracking-tight text-gray-900"/>
+            </div>
+
+            <div>
+            <label>Course(s)</label><br>
+            <input type="text" id="course" name="course" th:value="${profile.course}"
+                   class="w-full py-3 px-4 mb-3 rounded-lg font-normal tracking-tight text-gray-900"/>
+            </div>
+
+            <div>
+            <label>Phone</label><br>
+            <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                   th:value="${profile.phone}"
+                   class="w-full pt-3 pb-1 px-4 mb-1 rounded-lg font-normal tracking-tight text-gray-900"/>
+            <div class="text-sm help-block mb-3">Format: 123-456-7890</div>
+            </div>
+
+            <div>
+            <label>Volunteering</label><br>
+            <input type="text" id="volunteering" name="volunteering" th:value="${profile.volunteering}"
+                   class="w-full py-3 px-4 mb-3 rounded-lg font-normal tracking-tight text-gray-900"/>
+            </div>
+
+            <div>
+            <label>Project(s)</label><br>
+            <input type="text" id="project" name="project" th:value="${profile.project}"
+                   class="w-full py-3 px-4 mb-3 rounded-lg font-normal tracking-tight text-gray-900"/>
+            </div>
+
+            <div>
+            <label>Award(s)</label><br>
+            <input type="text" id="award" name="award" th:value="${profile.award}"
+                   class="w-full py-3 px-4 mb-3 rounded-lg font-normal tracking-tight text-gray-900"/>
+            </div>
+
+            <div>
+            <label>Language(s)</label><br>
+            <input type="text" id="location" name="language" th:value="${profile.language}"
+                   class="w-full py-3 px-4 mb-3 rounded-lg font-normal tracking-tight text-gray-900"/>
+            </div>
+
+            <div class="flex justify-center">
+            <button class="py-2 px-4 bg-red-500 text-white rounded-full" type="submit">Save</button>
+            </div>
+
+            </form>
         </div>
-    </form>
-</div>
+    </div>
 </html>
